fix(admin): align icons (refs #1143)

--- a/admin-center/src/public/Anakeen/adminCenter/assets/adminCenter.css
+++ b/admin-center/src/public/Anakeen/adminCenter/assets/adminCenter.css
@@ -5,6 +5,7 @@ html {
 /* align dock buttons */
 .hub-dock-entry-component nav  .hub-icon {
     margin-right: 0.5rem;
+    width: 2rem;
 }
 
 .hub-dock-entry-component nav {
